@@ -7,7 +7,7 @@
  <f id="Coverage" v=""/>
  <f id="CreationDate" v="20060208102711Z"/>
  <f id="Creator" v="admin"/>
- <f id="Description" v="/members doesn't work yet !"/>
+ <f id="Description" v=""/>
  <f id="EffectiveDate" v=""/>
  <f id="ExpirationDate" v=""/>
  <f id="Format" v="text/html"/>
@@ -27,7 +27,7 @@
  <f id="context_rpath" v=""/>
  <f id="contextual" v="0"/>
  <f id="disable_override" v="0"/>
- <f id="display" v="site_map"/>
+ <f id="display" v="site_map_3_tabs"/>
  <f id="display_description" v="False"/>
  <f id="display_hidden_folders" v="False"/>
  <f id="display_managers" v="0"/>
