@@ -62,7 +62,7 @@
   </property>
   <property name="hidden_readonly_layout_modes"/>
   <property
-     name="hidden_if_expr">python: context.display in ['vertical_breadcrumbs_menu', 'folder_contents', 'folder_contents_detailed', 'subfolder_contents', 'site_map', 'collapsible_menu', 'up_to_parent', 'folder_contents_dropdown_list']</property>
+     name="hidden_if_expr">python: context.display in ['vertical_breadcrumbs_menu', 'folder_contents', 'folder_contents_detailed', 'subfolder_contents', 'site_map', 'site_map_3_tabs', 'collapsible_menu', 'up_to_parent', 'folder_contents_dropdown_list']</property>
  </widget>
  <widget name="display" meta_type="Select Widget">
   <property name="fields">
@@ -90,7 +90,7 @@
   </property>
   <property name="hidden_readonly_layout_modes"/>
   <property
-     name="hidden_if_expr">python: context.display not in ['extended_site_map', 'site_map', 'folder_contents', 'subfolder_contents', 'navigation_tree', 'collapsible_menu']</property>
+     name="hidden_if_expr">python: context.display not in ['extended_site_map', 'site_map', 'site_map_3_tabs', 'folder_contents', 'subfolder_contents', 'navigation_tree', 'collapsible_menu']</property>
  </widget>
  <widget name="display_hidden_folders" meta_type="Boolean Widget">
   <property name="fields">
@@ -148,7 +148,7 @@
   </property>
   <property name="hidden_readonly_layout_modes"/>
   <property
-     name="hidden_if_expr">python: context.display != 'site_map'</property>
+     name="hidden_if_expr">python: context.display not in ['site_map', 'site_map_3_tabs']</property>
  </widget>
  <widget name="portlet" meta_type="Generic Portlet Widget">
   <property name="fields">
@@ -172,7 +172,7 @@
   </property>
   <property name="hidden_readonly_layout_modes"/>
   <property
-     name="hidden_if_expr">python: context.display in ['folder_contents', 'subfolder_contents', 'navigation_tree', 'site_map', 'up_to_parent', 'folder_contents_detailed', 'folder_contents_dropdown_list']</property>
+     name="hidden_if_expr">python: context.display in ['folder_contents', 'subfolder_contents', 'navigation_tree', 'site_map', 'site_map_3_tabs', 'up_to_parent', 'folder_contents_detailed', 'folder_contents_dropdown_list']</property>
  </widget>
  <widget name="root_uids" meta_type="Lines Widget">
   <property name="fields">
