@@ -18,6 +18,8 @@
     msgid="cpsportlets_nav_display_collapsible_menu_label">Collapsible menu</item>
  <item key="site_map"
     msgid="cpsportlets_nav_display_site_map_label">Site map</item>
+ <item key="site_map_3_tabs"
+    msgid="cpsportlets_nav_display_site_map_3_tabs_label">Site map with 3 tabs</item>
  <item key="extended_site_map"
     msgid="cpsportlets_nav_display_extended_site_map_label">Extended site map</item>
  <item key="vertical_breadcrumbs_menu"
