@@ -23,3 +23,4 @@ New internal features:
 - #1319: disabled "private space" action
 - #1390: Add user name to user_actions portlet.
 - #1480: Layers order in skins is wrong when importing
+- #1391: private space added to the navigation's portlet
